# multi-consumer-ipc

./: CMakeLists.txt  LICENSE  README.md
examples/condition_variables/: CMakeLists.txt  Demo.cpp
include/: logger.h
multi-threaded-tcp-server/: CMakeLists.txt  README.md
multi-threaded-tcp-server/src/: client.cpp  server.cpp
mutex-between-multiple-processes/: CMakeLists.txt
mutex-between-multiple-processes-using-boost/: CMakeLists.txt
mutex-between-multiple-processes-using-boost/src/: cleanup.cpp  reader.cpp  shared_defs.h  writer.cpp
mutex-between-multiple-processes/src/: cleanup.cpp  reader.cpp  shared_defs.h  writer.cpp
output/: consumer.txt
single-producer-multiple-consumer/: CMakeLists.txt
single-producer-multiple-consumer/output/: producer.txt  producerConsumerDemo.txt
single-producer-multiple-consumer/src/: consumer.cpp  producer.cpp
src/: cleanup.cpp  common.h  producerConsumerDemo.cpp
